# cosmwasm-simulate

./: .gitignore  Cargo.toml  README.md  messages-dns.json  messages-erc20.json  messages-go-poc.json  messages.json  msg.json  run-go.sh  run.sh
src/: main.rs
src/contract_vm/: analyzer.rs  engine.rs  messages.rs  mock.rs  mod.rs  querier.rs  storage.rs  utils.rs  watcher.rs
wasm_dns_code/: dns.wasm
