[package]
name = "cosmwasm-simulate"
version = "0.1.0"
authors = ["KamiD"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
iterator = ["cosmwasm-std/iterator"]

[dependencies]
clap = "~2.32"
wasmer-singlepass-backend = "0.17"
cosmwasm-vm = "0.8"
cosmwasm-std = "0.8"
wasmer-runtime-core = "0.17"
wasmer-middleware-common = "0.17"
websocket="0.24.0"
serde_json = "1.0"
serde = { version = "1.0.103", default-features = false, features = ["derive", "alloc"] }
lazy_static = "1.2.0"
kv = "0.20.2"
